fix: docker 삭제